# Nexus

./: NEXUS_SPEC.md  README.md  pyproject.toml  requirements.txt
nexus/: __init__.py  __main__.py  audit.py  cli.py  compiler.py  intent.py  llm.py  profile.py  project.py  prompts.py  server.py  style.py  tighten.py  whisper.py
test-p3/.nexus/: profile.jsonl  types.jsonl
test-p3/src/: main.nx
